<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <VideoView
        android:id="@+id/backgroundVideoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/title_text"
        android:textColor="#89C4FF"
        android:textSize="35sp"
        android:textStyle="bold"
        android:lineSpacingExtra="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="start"
        android:text="@string/subtitle_text"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/title_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/title_text"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <TextView
        android:id="@+id/languageSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="DE"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/lock_icon"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/lock_icon"
        android:scaleType="fitCenter"
        android:src="@drawable/lock"
        app:layout_constraintStart_toEndOf="@id/title_text"
        app:layout_constraintTop_toTopOf="@id/title_text" />

    <ImageView
        android:id="@+id/speech_bubble"
        android:layout_width="233dp"
        android:layout_height="127dp"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/speech_bubble"
        android:src="@drawable/speech_bubble"
        app:layout_constraintBottom_toBottomOf="@+id/robotStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/animatedTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="58dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:padding="20dp"
        android:textAlignment="center"
        android:ellipsize="none"
        android:singleLine="false"
        android:maxLines="5"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/speech_bubble"
        app:layout_constraintEnd_toEndOf="@id/speech_bubble"
        app:layout_constraintStart_toStartOf="@id/speech_bubble"
        app:layout_constraintTop_toTopOf="@id/speech_bubble" />

    <ImageView
        android:id="@+id/robotStart"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="76dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/robot_start"
        android:scaleType="fitXY"
        android:src="@drawable/robot_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/touchIndication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/touch_indication_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="680dp"
        tools:layout_editor_absoluteY="908dp" />

    <ImageView
        android:id="@+id/touchIcon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/touch_icon"
        android:src="@drawable/touch_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>



