<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <VideoView
        android:id="@+id/backgroundVideoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_score_text"
        android:fontFamily="@font/inter_bold"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:background="@drawable/total_score_button"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/safety_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/safety_message_end"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/score_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <ImageView
        android:id="@+id/robot_image_right"
        android:layout_width="251dp"
        android:layout_height="234dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="-360dp"
        android:rotation="0"
        android:src="@drawable/roby_heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_text" />

    <ImageView
        android:id="@+id/qr_code_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/bitwarden_qr"
        app:layout_constraintTop_toBottomOf="@id/safety_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/download_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_message"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/qr_code_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
